--- a/.crossbar/config.json
+++ b/.crossbar/config.json
@@ -1,84 +1,132 @@
 {
-    "version": 2,
-    "workers": [
-        {
-            "type": "router",
-            "realms": [
-                {
-                    "name": "realm1",
-                    "roles": [
+   "version": 2,
+   "workers": [
+      {
+         "realms": [
+            {
+               "name": "crossbarRobotica",
+               "roles": [
+                  {
+                     "name": "anonymous",
+                     "permissions": [
                         {
-                            "name": "anonymous",
-                            "permissions": [
-                                {
-                                    "uri": "",
-                                    "match": "prefix",
-                                    "allow": {
-                                        "call": true,
-                                        "register": true,
-                                        "publish": true,
-                                        "subscribe": true
-                                    },
-                                    "disclose": {
-                                        "caller": false,
-                                        "publisher": false
-                                    },
-                                    "cache": true
-                                }
-                            ]
+                           "allow": {
+                              "call": true,
+                              "publish": true,
+                              "register": true,
+                              "subscribe": true
+                           },
+                           "cache": true,
+                           "disclose": {
+                              "caller": true,
+                              "publisher": true
+                           },
+                           "match": "prefix",
+                           "uri": "io.robotica.controle"
                         }
-                    ]
-                }
-            ],
-            "transports": [
-                {
-                    "type": "web",
-                    "endpoint": {
-                        "type": "tcp",
-                        "port": "$PORT"
-                    },
-                    "paths": {
-                        "/": {
-                            "type": "static",
-                            "directory": "../web"
-                        },
-                        "ws": {
-                            "type": "websocket"
-                        }
-                    }
-                },
-                {
-                    "type": "websocket",
-                    "endpoint": {
-                        "type": "tcp",
-                        "port": 9000
-                    }
-                }
-            ]
-        },
-        {
-            "type": "container",
-            "options": {
-                "pythonpath": [
-                    ".."
-                ]
+                     ]
+                  }
+               ]
+            }
+         ],
+         "transports": [
+            {
+               "endpoint": {
+                  "port": 1883,
+                  "type": "tcp"
+               },
+               "options": {
+                  "payload_mapping": {
+                     "": {
+                        "type": "passthrough"
+                     }
+                  },
+                  "realm": "crossbarRobotica",
+                  "role": "anonymous"
+               },
+               "type": "mqtt"
             },
-            "components": [
-                {
-                    "type": "class",
-                    "classname": "hello.AppSession",
-                    "realm": "realm1",
-                    "transport": {
-                        "type": "websocket",
-                        "endpoint": {
-                            "type": "tcp",
-                            "host": "127.0.0.1",
-                            "port": 9000
+            {
+               "endpoint": {
+                  "port": 9000,
+                  "type": "tcp"
+               },
+               "mqtt": {
+                  "options": {
+                     "payload_mapping": {
+                        "": {
+                           "type": "passthrough"
+                        }
+                     },
+                     "realm": "crossbarRobotica",
+                     "role": "anonymous"
+                  }
+               },
+               "type": "universal",
+               "web": {
+                  "paths": {
+                     "/": {
+                        "directory": "../web",
+                        "options": {
+                           "enable_directory_listing": true
                         },
-                        "url": "ws://127.0.0.1:9000/ws"
-                    }
-                }
+                        "type": "static"
+                     },
+                     "call": {
+                        "options": {
+                           "debug": true
+                        },
+                        "realm": "crossbarRobotica",
+                        "role": "anonymous",
+                        "type": "caller"
+                     },
+                     "ws": {
+                        "debug": true,
+                        "type": "websocket"
+                     }
+                  }
+               },
+               "websocket": {
+                  "ws": {
+                     "serializers": [
+                        "cbor",
+                        "msgpack",
+                        "ubjson",
+                        "json"
+                     ],
+                     "type": "websocket"
+                  }
+               }
+            }
+         ],
+         "type": "router"
+      },
+      {
+         "components": [
+            {
+               "classname": "roteador.ControleBackend",
+               "realm": "crossbarRobotica",
+               "transport": {
+                  "endpoint": {
+                     "host": "localhost",
+                     "port": 9000,
+                     "type": "tcp"
+                  },
+                  "options": {
+                     "enable_webstatus": false
+                  },
+                  "type": "websocket",
+                  "url": "ws://localhost:9000/ws"
+               },
+               "type": "class"
+            }
+         ],
+         "options": {
+            "pythonpath": [
+               ".."
             ]
-        }
-    ]
+         },
+         "type": "container"
+      }
+   ]
 }
