--- a/.crossbar/config.json
+++ b/.crossbar/config.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "https://raw.githubusercontent.com/crossbario/crossbar/master/crossbar.json",
     "version": 2,
     "workers": [
         {
@@ -61,24 +62,7 @@
                     "type": "tcp",
                     "port": 9000
                 }
-              },
- {
-            "id": "mqtt-001",
-            "type": "mqtt",
-            "endpoint": {
-                "type": "tcp",
-                "port": 1883
-            },
-            "options": {
-                "realm": "realm1",
-                "role": "anonymous",
-                "payload_mapping": {
-                    "": {
-                        "type": "passthrough"
-                    }
-                }
-            }
-        }              
+              }
             ]
         },
         {
